terragrunt/modules/core-networking/waf-php.tf
resource "aws_wafv2_web_acl" "php" {
  count = var.environment != "orchestrator" ? 1 : 0

  name        = "${local.name_prefix_php}-acl"
  description = "${local.name_prefix_php} Web ACL for special services"
  scope       = "REGIONAL" # "CLOUDFRONT" N.Virginia

  default_action {
    allow {}
  }

  custom_response_body {
    key          = "${local.name_prefix_php}_blocked_request"
    content      = "Access denied"
    content_type = "TEXT_PLAIN"
  }

  custom_response_body {
    key          = "${local.name_prefix_php}_rate_limit_exceeded"
    content      = "Rate limit of ${local.rate_limit_count} exceeded. Please retry after ${local.rate_limit_window_seconds} seconds."
    content_type = "TEXT_PLAIN"
  }

  custom_response_body {
    key          = "${local.name_prefix_php}_rate_limit_global_exceeded"
    content      = "Rate limit of ${local.rate_limit_global_count} exceeded. Please retry after ${local.rate_limit_window_seconds} seconds."
    content_type = "TEXT_PLAIN"
  }

  rule {
    name     = "${local.name_prefix_php}-allow-known-ips"
    priority = 1

    action {
      count {}
    }

    statement {
      ip_set_reference_statement {
        arn = aws_wafv2_ip_set.known_ips.arn
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${local.name_prefix_php}-allow-known-ips"
      sampled_requests_enabled   = true
    }
  }

  dynamic "rule" {
    for_each = length(local.waf_blocked_ip_list) > 0 ? [1] : []

    content {
      name     = "${local.name_prefix_php}-block-ips"
      priority = 15

      action {
        block {}
      }

      statement {
        ip_set_reference_statement {
          arn = aws_wafv2_ip_set.blocked[0].arn
        }
      }

      visibility_config {
        cloudwatch_metrics_enabled = true
        metric_name                = "${local.name_prefix_php}-block-ips"
        sampled_requests_enabled   = true
      }
    }
  }

  rule {
    name     = "${local.name_prefix_php}-block-bots-ua"
    priority = 3

    action {
      block {}
    }

    statement {
      and_statement {
        statement {
          not_statement {
            statement {
              ip_set_reference_statement {
                arn = aws_wafv2_ip_set.known_ips.arn
              }
            }
          }
        }

        statement {
          regex_match_statement {
            regex_string = local.waf_php_bot_block_ua_regex

            field_to_match {
              single_header {
                name = "user-agent"
              }
            }

            text_transformation {
              priority = 0
              type     = "LOWERCASE"
            }
          }
        }

        statement {
          not_statement {
            statement {
              regex_match_statement {
                regex_string = local.waf_php_bot_block_ua_exempt_prefix_regex

                field_to_match {
                  single_header {
                    name = "user-agent"
                  }
                }

                text_transformation {
                  priority = 0
                  type     = "LOWERCASE"
                }
              }
            }
          }
        }
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${local.name_prefix_php}-block-bots-ua"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "${local.name_prefix_php}-bot-control-notice"
    priority = 5

    override_action {
      none {}
    }

    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesBotControlRuleSet"
        vendor_name = "AWS"

        rule_action_override {
          name = "CategoryAI"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategoryAdvertising"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategoryArchiver"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategoryContentFetcher"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategoryLinkChecker"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategoryMiscellaneous"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategoryMonitoring"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategoryPagePreview"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategoryScrapingFramework"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategorySearchEngine"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategorySecurity"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategorySeo"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategorySocialMedia"
          action_to_use {
            block {}
          }
        }
        rule_action_override {
          name = "CategoryWebhooks"
          action_to_use {
            block {}
          }
        }

        scope_down_statement {
          and_statement {
            statement {
              not_statement {
                statement {
                  ip_set_reference_statement {
                    arn = aws_wafv2_ip_set.known_ips.arn
                  }
                }
              }
            }

            statement {
              regex_match_statement {
                regex_string = local.waf_php_notice_paths_all

                field_to_match {
                  uri_path {}
                }

                text_transformation {
                  priority = 0
                  type     = "LOWERCASE"
                }
              }
            }
          }
        }
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${local.name_prefix_php}-bot-control-notice"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "${local.name_prefix_php}-block-verified-bots-notice"
    priority = 7

    action {
      block {}
    }

    statement {
      and_statement {
        statement {
          not_statement {
            statement {
              ip_set_reference_statement {
                arn = aws_wafv2_ip_set.known_ips.arn
              }
            }
          }
        }

        statement {
          regex_match_statement {
            regex_string = local.waf_php_notice_paths_all

            field_to_match {
              uri_path {}
            }

            text_transformation {
              priority = 0
              type     = "LOWERCASE"
            }
          }
        }

        statement {
          label_match_statement {
            scope = "LABEL"
            key   = "awswaf:managed:aws:bot-control:bot:verified"
          }
        }
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${local.name_prefix_php}-block-verified-bots-notice"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "${local.name_prefix_php}-RateLimitOldChromeNoticeByUA"
    priority = 10

    action {
      dynamic "challenge" {
        for_each = local.waf_php_old_chrome_notice_challenge_enabled ? [1] : []
        content {}
      }

      dynamic "count" {
        for_each = local.waf_php_old_chrome_notice_challenge_enabled ? [] : [1]
        content {}
      }
    }

    statement {
      rate_based_statement {
        limit                 = local.rate_limit_old_chrome_notice_ua_count
        evaluation_window_sec = local.rate_limit_window_seconds
        aggregate_key_type    = "CUSTOM_KEYS"

        custom_key {
          header {
            name = "user-agent"

            text_transformation {
              priority = 0
              type     = "LOWERCASE"
            }
          }
        }

        scope_down_statement {
          and_statement {
            statement {
              regex_match_statement {
                regex_string = local.waf_php_notice_paths_all

                field_to_match {
                  uri_path {}
                }

                text_transformation {
                  priority = 0
                  type     = "LOWERCASE"
                }
              }
            }

            statement {
              regex_match_statement {
                regex_string = local.waf_php_old_chrome_notice_ua_regex

                field_to_match {
                  single_header {
                    name = "user-agent"
                  }
                }

                text_transformation {
                  priority = 0
                  type     = "LOWERCASE"
                }
              }
            }
          }
        }
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${local.name_prefix_php}-RateLimitOldChromeNoticeByUA"
      sampled_requests_enabled   = true
    }
  }

  dynamic "rule" {
    for_each = local.waf_rule_sets_priority_blockers
    content {
      name     = "${local.name_prefix_php}-${rule.key}"
      priority = rule.value

      override_action {
        none {}
      }

      statement {
        managed_rule_group_statement {
          name        = rule.key
          vendor_name = "AWS"

          scope_down_statement {
            not_statement {
              statement {
                ip_set_reference_statement {
                  arn = aws_wafv2_ip_set.known_ips.arn
                }
              }
            }
          }
        }
      }

      visibility_config {
        cloudwatch_metrics_enabled = true
        metric_name                = "${local.name_prefix_php}-${rule.key}"
        sampled_requests_enabled   = true
      }
    }
  }

  dynamic "rule" {
    for_each = local.waf_rule_sets_priority_observers
    content {
      name     = "${local.name_prefix_php}-${rule.key}"
      priority = rule.value

      override_action {
        count {}
      }

      statement {
        managed_rule_group_statement {
          name        = rule.key
          vendor_name = "AWS"

          scope_down_statement {
            not_statement {
              statement {
                ip_set_reference_statement {
                  arn = aws_wafv2_ip_set.known_ips.arn
                }
              }
            }
          }
        }
      }

      visibility_config {
        cloudwatch_metrics_enabled = true
        metric_name                = "${local.name_prefix_php}-${rule.key}"
        sampled_requests_enabled   = true
      }
    }
  }

  dynamic "rule" {
    for_each = local.waf_php_ocds_rate_limit_rules
    content {
      name     = "${local.name_prefix_php}-${rule.value.name}"
      priority = rule.value.priority

      action {
        block {
          custom_response {
            response_code            = 429
            custom_response_body_key = "${local.name_prefix_php}_rate_limit_exceeded"

            response_header {
              name  = "Retry-After"
              value = local.rate_limit_window_seconds
            }
          }
        }
      }

      statement {
        rate_based_statement {
          limit                 = local.rate_limit_count
          evaluation_window_sec = local.rate_limit_window_seconds
          aggregate_key_type    = "IP"

          scope_down_statement {
            and_statement {
              statement {
                not_statement {
                  statement {
                    ip_set_reference_statement {
                      arn = aws_wafv2_ip_set.internal_egress.arn
                    }
                  }
                }
              }

              statement {
                regex_match_statement {
                  regex_string = rule.value.regex

                  field_to_match {
                    uri_path {}
                  }

                  text_transformation {
                    priority = 0
                    type     = "NONE"
                  }
                }
              }
            }
          }
        }
      }

      visibility_config {
        cloudwatch_metrics_enabled = true
        metric_name                = "${local.name_prefix_php}-${rule.value.name}"
        sampled_requests_enabled   = true
      }
    }
  }

  rule {
    name     = "${local.name_prefix_php}-RateLimitHighTrafficPaths"
    priority = 11

    action {
      block {
        custom_response {
          response_code            = 429
          custom_response_body_key = "${local.name_prefix_php}_rate_limit_exceeded"

          response_header {
            name  = "Retry-After"
            value = local.rate_limit_window_seconds
          }
        }
      }
    }

    statement {
      rate_based_statement {
        limit                 = local.rate_limit_count
        evaluation_window_sec = local.rate_limit_window_seconds
        aggregate_key_type    = "IP"

        scope_down_statement {
          and_statement {
            statement {
              not_statement {
                statement {
                  ip_set_reference_statement {
                    arn = aws_wafv2_ip_set.internal_egress.arn
                  }
                }
              }
            }

            statement {
              regex_match_statement {
                regex_string = local.waf_php_rate_limit_paths

                field_to_match {
                  uri_path {}
                }

                text_transformation {
                  priority = 0
                  type     = "LOWERCASE"
                }
              }
            }
          }
        }
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${local.name_prefix_php}-RateLimitHighTrafficPaths"
      sampled_requests_enabled   = true
    }
  }

  rule {
    name     = "${local.name_prefix_php}-RateLimitAllPaths"
    priority = 12

    action {
      block {
        custom_response {
          response_code            = 429
          custom_response_body_key = "${local.name_prefix_php}_rate_limit_global_exceeded"

          response_header {
            name  = "Retry-After"
            value = local.rate_limit_window_seconds
          }
        }
      }
    }

    statement {
      rate_based_statement {
        limit                 = local.rate_limit_global_count
        evaluation_window_sec = local.rate_limit_window_seconds
        aggregate_key_type    = "IP"

        scope_down_statement {
          not_statement {
            statement {
              ip_set_reference_statement {
                arn = aws_wafv2_ip_set.internal_egress.arn
              }
            }
          }
        }
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "${local.name_prefix_php}-RateLimitAllPaths"
      sampled_requests_enabled   = true
    }
  }


  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "${local.name_prefix_php}-waf-acl"
    sampled_requests_enabled   = true
  }

  tags = merge(
    { Name = "${local.name_prefix_php}-acl" },
    var.tags
  )

}

resource "aws_wafv2_web_acl_logging_configuration" "php" {
  count = var.environment != "orchestrator" ? 1 : 0

  log_destination_configs = [aws_cloudwatch_log_group.waf_php.arn]
  resource_arn            = aws_wafv2_web_acl.php[0].arn

}
